--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -20,7 +20,7 @@ library
     Carbon.Aggregator
   build-depends:
     base >=4.7 && <4.8,
-    regex-posix ==0.95.*,
+    regex-pcre-builtin ==0.94.*,
     bytestring ==0.10.*,
     stringsearch ==0.3.6.6,
     split ==0.2.2
@@ -54,7 +54,7 @@ test-suite tests
   build-depends:
     base -any,
     carbon-aggregator -any,
-    regex-posix -any,
+    regex-pcre-builtin -any,
     bytestring -any,
     stringsearch -any,
     split -any,
@@ -63,4 +63,4 @@ test-suite tests
     QuickCheck -any
   default-language: Haskell2010
   hs-source-dirs: src/library test-suite
-  ghc-options: -fhpc -Wall -Werror
+  ghc-options: -fhpc -Wall -Werror -fno-warn-orphans
