--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -17,6 +17,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:
+    Carbon,
     Carbon.Aggregator,
     Carbon.Aggregator.Buffer
   build-depends:
