--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -20,16 +20,23 @@ library
     Carbon,
     Carbon.Decoder,
     Carbon.Aggregator,
+    Carbon.Aggregator.Config,
+    Carbon.Aggregator.Config.Loader,
+    Carbon.Aggregator.Rules.Loader,
     Carbon.Aggregator.Buffer,
     Carbon.Aggregator.Processor,
     Carbon.Aggregator.Server
   build-depends:
     base >=4.7 && <4.8,
+    filepath -any,
+    deepseq -any,
     regex-pcre-builtin ==0.94.*,
     bytestring ==0.10.*,
     bytestring-lexing == 0.5.*,
     stringsearch ==0.3.6.6,
     containers ==0.5.*,
+    ConfigFile ==1.1.4,
+    mtl ==2.*,
     stm -any,
     parallel ==3.2.*,
     split ==0.2.2,
@@ -44,6 +51,7 @@ executable carbon-aggregator
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.7 && <4.8,
+                       filepath -any,
                        carbon-aggregator -any,
                        network -any,
                        bytestring -any,
