--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -32,6 +32,7 @@ library
     filepath -any,
     deepseq -any,
     regex-pcre-builtin ==0.94.*,
+    attoparsec ==0.12.*,
     bytestring ==0.10.*,
     bytestring-lexing ==0.4.*,
     stringsearch ==0.3.6.6,
@@ -78,6 +79,7 @@ test-suite tests
     base -any,
     carbon-aggregator -any,
     regex-pcre-builtin -any,
+    attoparsec -any,
     bytestring -any,
     bytestring-lexing -any,
     stringsearch -any,
@@ -86,6 +88,7 @@ test-suite tests
     stm -any,
     parallel -any,
     hspec ==2.*,
+    hspec-attoparsec -any,
     HUnit -any,
     QuickCheck -any
   default-language: Haskell2010
