--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -49,7 +49,7 @@ library
     split ==0.2.2,
     network == 2.6.*
   ghc-prof-options: -auto-all -prof
-  ghc-options: -Wall
+  ghc-options: -Wall -fno-warn-unused-do-bind
   hs-source-dirs:      src/library
   default-language:    Haskell2010
 
@@ -98,4 +98,4 @@ test-suite tests
     QuickCheck -any
   default-language: Haskell2010
   hs-source-dirs: src/library test-suite
-  ghc-options: -fhpc -Wall -Werror -fno-warn-orphans
+  ghc-options: -fhpc -Wall -Werror -fno-warn-orphans -fno-warn-unused-do-bind
