--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -20,6 +20,7 @@ library
     Carbon,
     Carbon.Compose,
     Carbon.Decoder,
+    Carbon.Codec.Pickle,
     Carbon.Aggregator,
     Carbon.Aggregator.Config,
     Carbon.Aggregator.Config.Loader,
@@ -30,6 +31,9 @@ library
     Carbon.Aggregator.Processor,
     Carbon.Aggregator.Server
   other-modules:
+    Carbon.Codec.Pickle.Decode,
+    Carbon.Codec.Pickle.Encode,
+    Language.Python.Pickle,
     Carbon.Aggregator.Rules.Tokenizer,
     Carbon.Aggregator.Rules.Template
   build-depends:
@@ -38,11 +42,13 @@ library
     deepseq -any,
     regex-pcre-builtin ==0.94.*,
     attoparsec ==0.12.*,
+    binary,
     bytestring ==0.10.*,
     bytestring-lexing ==0.4.*,
     stringsearch ==0.3.6.6,
     containers ==0.5.*,
     ConfigFile ==1.1.4,
+    cereal,
     mtl ==2.*,
     stm -any,
     parallel ==3.2.*,
@@ -50,7 +56,7 @@ library
     network == 2.6.*
   ghc-prof-options: -auto-all -prof
   ghc-options: -Wall -fno-warn-unused-do-bind
-  hs-source-dirs:      src/library
+  hs-source-dirs:      src/library, 3rd-party/python-pickle
   default-language:    Haskell2010
 
 executable carbon-aggregator
@@ -85,11 +91,14 @@ test-suite tests
     carbon-aggregator -any,
     regex-pcre-builtin -any,
     attoparsec -any,
+    binary,
     bytestring -any,
     bytestring-lexing -any,
     stringsearch -any,
     split -any,
     containers -any,
+    cereal,
+    mtl,
     stm -any,
     parallel -any,
     hspec ==2.*,
@@ -97,5 +106,6 @@ test-suite tests
     HUnit -any,
     QuickCheck -any
   default-language: Haskell2010
-  hs-source-dirs: src/library test-suite
-  ghc-options: -fhpc -Wall -Werror -fno-warn-orphans -fno-warn-unused-do-bind
+  hs-source-dirs: src/library 3rd-party/python-pickle test-suite
+  -- return -Werror once Pickle is fixed
+  ghc-options: -fhpc -Wall  -fno-warn-orphans -fno-warn-unused-do-bind
