--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -55,7 +55,7 @@ library
     split ==0.2.2,
     network == 2.6.*
   ghc-prof-options: -auto-all -prof
-  ghc-options: -Wall -fno-warn-unused-do-bind
+  ghc-options: -Wall -Werror -fno-warn-unused-do-bind
   hs-source-dirs:      src/library, 3rd-party/python-pickle
   default-language:    Haskell2010
 
@@ -107,5 +107,4 @@ test-suite tests
     QuickCheck -any
   default-language: Haskell2010
   hs-source-dirs: src/library 3rd-party/python-pickle test-suite
-  -- return -Werror once Pickle is fixed
-  ghc-options: -fhpc -Wall  -fno-warn-orphans -fno-warn-unused-do-bind
+  ghc-options: -fhpc -Wall -Werror -fno-warn-orphans -fno-warn-unused-do-bind
