--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -68,11 +68,12 @@ executable carbon-aggregator
                        filepath -any,
                        carbon-aggregator -any,
                        network -any,
+                       time -any,
                        bytestring -any,
-                       stm -any,
-                       parallel -any
+                       stm -any
   hs-source-dirs:      src/daemon
   default-language:    Haskell2010
+  ghc-options:         -threaded -O2
 
 test-suite lint
   type: exitcode-stdio-1.0
@@ -103,6 +104,7 @@ test-suite tests
     stm -any,
     parallel -any,
     hspec ==2.*,
+    knob -any,
     hspec-attoparsec -any,
     HUnit -any,
     QuickCheck -any
