Fix Processor spec

--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -105,6 +105,9 @@ test-suite tests
     cereal,
     mtl,
     stm -any,
+    stm-containers -any,
+    list-t -any,
+    focus -any,
     parallel -any,
     hspec ==2.*,
     knob -any,
