--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -80,7 +80,7 @@ executable carbon-aggregator
                        stm -any
   hs-source-dirs:      src/daemon
   default-language:    Haskell2010
-  ghc-options:         -threaded -O2
+  ghc-options:         -threaded -O2 -with-rtsopts=-N
 
 test-suite lint
   type: exitcode-stdio-1.0
