--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -77,6 +77,7 @@ executable carbon-aggregator
                        hostname -any,
                        time -any,
                        bytestring -any,
+                       async -any,
                        stm -any
   hs-source-dirs:      src/daemon
   default-language:    Haskell2010
