--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -40,27 +40,28 @@ library
     Carbon.Aggregator.Rules.Tokenizer,
     Carbon.Aggregator.Rules.Template
   build-depends:
-    base >=4.7 && <4.8,
-    filepath -any,
-    optparse-applicative -any,
-    deepseq -any,
-    regex-pcre-builtin ==0.94.*,
-    attoparsec ==0.12.*,
+    base >=4.7 && <5,
+    filepath,
+    optparse-applicative,
+    deepseq,
+    regex-pcre-builtin,
+    attoparsec,
     binary,
-    bytestring ==0.10.*,
-    bytestring-lexing ==0.4.*,
-    stringsearch ==0.3.6.6,
-    containers ==0.5.*,
-    ConfigFile ==1.1.4,
+    bytestring,
+    bytestring-lexing,
+    stringsearch,
+    containers,
+    transformers,
+    ConfigFile,
     cereal,
-    mtl ==2.*,
-    stm -any,
-    stm-containers -any,
-    list-t -any,
-    focus -any,
-    parallel ==3.2.*,
-    split ==0.2.2,
-    network == 2.6.*
+    mtl,
+    stm,
+    stm-containers,
+    list-t,
+    focus,
+    parallel,
+    split,
+    network
   ghc-prof-options: -auto-all -prof
   ghc-options: -Wall -Werror -fno-warn-unused-do-bind
   hs-source-dirs:      src/library, 3rd-party/python-pickle
@@ -70,15 +71,15 @@ executable carbon-aggregator
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.7 && <4.8,
-                       filepath -any,
-                       carbon-aggregator -any,
-                       network -any,
-                       hostname -any,
-                       time -any,
-                       bytestring -any,
-                       async -any,
-                       stm -any
+  build-depends:       base >=4.7 && <5,
+                       filepath,
+                       carbon-aggregator,
+                       network,
+                       hostname,
+                       time,
+                       bytestring,
+                       async,
+                       stm
   hs-source-dirs:      src/daemon
   default-language:    Haskell2010
   ghc-options:         -threaded -O2 -with-rtsopts=-N
@@ -87,8 +88,8 @@ test-suite lint
   type: exitcode-stdio-1.0
   main-is: HLint.hs
   build-depends:
-    base -any,
-    hlint ==1.*
+    base,
+    hlint
   default-language: Haskell2010
   hs-source-dirs: test-suite
   ghc-options: -Wall -Werror
@@ -97,28 +98,28 @@ test-suite tests
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   build-depends:
-    base -any,
-    carbon-aggregator -any,
-    regex-pcre-builtin -any,
-    attoparsec -any,
+    base,
+    carbon-aggregator,
+    regex-pcre-builtin,
+    attoparsec,
     binary,
-    bytestring -any,
-    bytestring-lexing -any,
-    stringsearch -any,
-    split -any,
-    containers -any,
+    bytestring,
+    bytestring-lexing,
+    stringsearch,
+    split,
+    containers,
     cereal,
     mtl,
-    stm -any,
-    stm-containers -any,
-    list-t -any,
-    focus -any,
-    parallel -any,
-    hspec ==2.*,
-    knob -any,
-    hspec-attoparsec -any,
-    HUnit -any,
-    QuickCheck -any
+    stm,
+    stm-containers,
+    list-t,
+    focus,
+    parallel,
+    hspec,
+    knob,
+    hspec-attoparsec,
+    HUnit,
+    QuickCheck
   default-language: Haskell2010
   hs-source-dirs: src/library 3rd-party/python-pickle test-suite
   ghc-options: -fhpc -Wall -Werror -fno-warn-orphans -fno-warn-unused-do-bind
