--- a/carbon-aggregator.cabal
+++ b/carbon-aggregator.cabal
@@ -15,6 +15,10 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
+flag static-gmp
+  description: Link libgmp.so statically
+  default: False
+
 library
   exposed-modules:
     Carbon,
@@ -83,6 +87,11 @@ executable carbon-aggregator
   hs-source-dirs:      src/daemon
   default-language:    Haskell2010
   ghc-options:         -threaded -O2 -with-rtsopts=-N
+  if flag(static-gmp)
+    -- GHC option below is used to workaroung GHC limitations.
+    -- We provide custom script in order to statically link GMP.so,
+    -- while leaving all other dependencies to be linked dynamically.
+    ghc-options: -pgml=/opt/workspace/w-static-link.sh
 
 test-suite lint
   type: exitcode-stdio-1.0
